k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-flow-lab
  namespace: git-flow-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: git-flow-lab
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: git-flow-lab
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: accelerator
                    operator: In
                    values:
                      - gpu-sim
      tolerations:
        - key: dedicated
          operator: Equal
          value: gpu
          effect: NoSchedule
      containers:
        - name: app
          image: git-flow-lab:local-v1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
