k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-flow-lab
  namespace: git-flow-lab
spec:
  type: ClusterIP
  selector:
    app: git-flow-lab
  ports:
    - name: http
      port: 80
      targetPort: http
